--- a/index.html
+++ b/index.html
@@ -216,18 +216,18 @@
     function autoUsePotion() {
       const missingHp = userData.maxHp - userData.hp;
       if (missingHp <= 0) return;
-      if (userData.potions.large > 0 && missingHp >= 200) {
+      if (userData.potions.large > 0 && missingHp >= 200 + userData.maxHp*0.07) {
         userData.potions.large--;
         userData.hp += Math.floor(200 + userData.maxHp*0.07);
-        log("대형 물약 사용! 체력 "+Math.floor(200+userData.maxHp*0.07)+" 회복");
-      } else if (userData.potions.medium > 0 && missingHp >= 100) {
+        log("대형 물약 사용! 체력 "+Math.floor(200 + userData.maxHp*0.07)+" 회복");
+      } else if (userData.potions.medium > 0 && missingHp >= 100 + userData.maxHp*0.05) {
         userData.potions.medium--;
         userData.hp += Math.floor(100 + userData.maxHp*0.05);
-        log("중형 물약 사용! 체력 "+Math.floor(100+userData.maxHp*0.05)+" 회복");
-      } else if (userData.potions.small > 0 && missingHp >= 50) {
+        log("중형 물약 사용! 체력 "+Math.floor(100 + userData.maxHp*0.05)+" 회복");
+      } else if (userData.potions.small > 0 && missingHp >= 50 + userData.maxHp*0.03) {
         userData.potions.small--;
         userData.hp += Math.floor(50 + userData.maxHp*0.03);
-        log("소형 물약 사용! 체력 "+Math.floor(50+userData.maxHp*0.03)+" 회복");
+        log("소형 물약 사용! 체력 "+Math.floor(50 + userData.maxHp*0.03)+" 회복");
       }
       userData.hp = Math.min(userData.hp, userData.maxHp);
     }
