--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
           userData = {
             nickname: nickname,
             gold: 0, exp: 0, level: 1,
+            atk: 1,
             dungeonTime: 60,
             hp: 100, maxHp: 100,
             potions: { small: 3, medium: 1, large: 0 }
