--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <button onclick="showTab('home')">홈</button>
       <button onclick="showTab('dungeon')">던전</button>
       <button onclick="showTab('shop')">상점</button>
-      <button onclick="showTab('donation')">후원</button>
+      <button onclick="showTab('donate')">후원</button>
     </div>
     
     <div id="homeTab">
