--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       document.getElementById("homeTab").style.display = name === "home" ? "block" : "none";
       document.getElementById("dungeonTab").style.display = name === "dungeon" ? "block" : "none";
       document.getElementById("shopTab").style.display = name === "shop" ? "block" : "none";
-      document.getElementById("donateTab").style.display = name === "donate" ? "block" : "none";
+      document.getElementById("donateTab").style.display = name === "donation" ? "block" : "none";
       if (name === "shop") {
         document.getElementById("goldShop").innerText = userData.gold;
       }
