--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
         document.getElementById("authUI").style.display = "none";
         document.getElementById("gameUI").style.display = "block";
         document.getElementById("nicknameDisplay").innerText = userData.nickname;
+        document.getElementById("bottomStatus").style.display = "flex";
         updateUI();
         showTab("home");
         log("로그인 성공!");
