--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
       userData = null;
       document.getElementById("authUI").style.display = "block";
       document.getElementById("gameUI").style.display = "none";
+      document.getElementById("bottomStatus").style.display = "none";
       log("로그아웃 되었습니다.");
     }
 
