--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     <div id="homeTab">
       <p>어서오세요! 던전에 입장하여 전투를 시작하세요.</p>
       <p><strong>현재 유저:</strong> <span id="nicknameDisplay"></span></p>
+      <p>골드: <span id="gold">0</span></p>
       <p>던전 시간: <span id="dungeonTime">60</span>초</p>
       <p>레벨: <span id="level">1</span></p>
       <p>물약: 소형: <span id="potionSmall">3</span> 중형: <span id="potionMedium">1</span> 대형: <span id="potionLarge">0</span></p>
