--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <div id="tabs" style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-bottom: 10px;">
       <button onclick="showTab('home')">홈</button>
       <button onclick="showTab('dungeon')">던전</button>
+      <button onclick="showTab('specialDungeon')">특수 던전</button>
       <button onclick="showTab('shop')">상점</button>
       <button onclick="showTab('donate')">후원</button>
       <button onclick="showTab('ranking')">랭킹</button>
@@ -135,6 +136,7 @@
       <p>물약: 소형: <span id="potionSmall">3</span> 중형: <span id="potionMedium">1</span> 대형: <span id="potionLarge">0</span></p>
       <button onclick="signOut()">로그아웃</button>
       </div>
+    
     <div id="dungeonTab" style="display:none;">
       <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 10px;">
         <button id="stagePrev">⬅</button>
@@ -143,7 +145,13 @@
       </div>
       <button onclick="enterDungeon()" id="dungeonToggleBtn">던전 입장</button>
     </div>
-    
+
+    <div id="specialDungeonTab" style="display: none;">
+      <h2>특수 던전</h2>
+      <p>특수 던전 시간: <span id="specialDungeonTimeDisplay">60</span>초</p>
+      <button onclick="enterSpecialDungeon()" id="specialDungeonBtn">입장하기</button>
+    </div>
+
     <div id="shopTab" style="display:none;">
       <h2>상점</h2>
       <p>보유 골드: <span id="goldShop">0</span></p>
