--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           hp: 100,
           maxHp: 100,
           potions: { small: 3, medium: 1, large: 0 },
-          dungeonTime: 60,
+          specialDungeonTime: 60,
           atk: 10,
           con: 10,
           dex: 10,
