--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
       log("던전에 입장합니다!");
       let monsterHp = 50 + currentStage * 10;
       let monsterAtk = 5 + currentStage * 2;
+      let reward = currentStage
       let monsterDodge = Math.min(20, currentStage);
       dungeonInterval = setInterval(() => {
         if (Math.random() * 100 < 10) {
@@ -333,9 +334,9 @@
         log("몬스터 남은 체력: "+monsterHp)
         
         if (monsterHp <= 0) {
-          userData.gold += currentStage * 20;
-          userData.exp += currentStage * 10;
-          log("몬스터 처치 보상 획득! 골드: "+currentStage * 20+" 경험치: "+currentStage * 10);
+          userData.gold += reward * 20;
+          userData.exp += reward * 10;
+          log("몬스터 처치 보상 획득! 골드: "+reward * 20+" 경험치: "+reward * 10);
           monsterHp = 50 + currentStage * 10;
           monsterAtk = 5 + currentStage * 2;
           monsterDodge = Math.min(20, currentStage);
