--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     <p><strong>현재 유저:</strong> <span id="nicknameDisplay"></span></p>
     <p>레벨: <span id="level">1</span></p>
     <p>체력: <span id="hp">100</span> / <span id="maxHp">100</span></p>
+    <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span> | 던전 시간: <span id="dungeonTime">60</span>초</p>
     <p>물약: 소형: <span id="potionSmall">3</span> 중형: <span id="potionMedium">1</span> 대형: <span id="potionLarge">0</span></p>
     <button onclick="signOut()">로그아웃</button>
     <div id="log"></div>
